--- a/index.html
+++ b/index.html
@@ -196,3 +196,6 @@
 
 
 </body></html>
+
+> Contact Us → [Telegram](http://t.me/fastfixgsm) _ [gfix4600@gmail.com](mailto:gfix4600@gmail.com)       
+
