--- a/index.html
+++ b/index.html
@@ -191,8 +191,10 @@
 	</script>
 
 	<img src="image/1.jpg" />
+	<img src="image/ip.jpg" />
 	
 
+> Contact Us → [Telegram](http://t.me/fastfixgsm) _ [gfix4600@gmail.com](mailto:gfix4600@gmail.com)       
 
 
 </body></html>
