--- a/index.html
+++ b/index.html
@@ -194,10 +194,21 @@
 	<img src="image/ip.jpg" />
 	
 
-> Contact Us → [Telegram](http://t.me/fastfixgsm) _ [gfix4600@gmail.com](mailto:gfix4600@gmail.com)       
+   <picture>
+        <source media="(min-width: 700px)"
+                srcset=
+"image/1.jpg">
+ 
+        <source media="(min-width: 450px)"
+                srcset=
+"image/1.jpg">
+ 
+        <img src=
+"image/1.jpg"
+             alt="GFG" style="width:auto;">
+    </picture>
 
 
 </body></html>
 
-> Contact Us → [Telegram](http://t.me/fastfixgsm) _ [gfix4600@gmail.com](mailto:gfix4600@gmail.com)       
 
