--- a/index.html
+++ b/index.html
@@ -190,8 +190,6 @@
 	
 	</script>
 
-	<img src="image/1.jpg" />
-	<img src="image/ip.jpg" />
 	
 
    <picture>
@@ -201,11 +199,8 @@
  
         <source media="(min-width: 450px)"
                 srcset=
-"image/1.jpg">
+"image/ip.jpg">
  
-        <img src=
-"image/1.jpg"
-             alt="GFG" style="width:auto;">
     </picture>
 
 
