--- a/index.html
+++ b/index.html
@@ -190,19 +190,8 @@
 	
 	</script>
 
-	
-
-   <picture>
-        <source media="(min-width: 700px)"
-                srcset=
-"image/1.jpg">
- 
-        <source media="(min-width: 450px)"
-                srcset=
-"image/ip.jpg">
- 
-    </picture>
-
+	<img src="image/1.jpg" />
+	<img src="image/ip.jpg" />
 
 </body></html>
 
